\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
\newcommand{\Rlogo}{\if{html}{\figure{../../html/logo.jpg}}\if{latex}{\figure{logo.jpg}{options: width=0.5in}}}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\name{NEWS}
\title{ R News}
\encoding{UTF-8}

\section{\Rlogo CHANGES IN R VERSION 2.14.1 patched}{
  \subsection{NEW FAEATURES}{
    \itemize{
      \item The internal \code{untar()} (as used by default by
      \command{R CMD INSTALL}) now knows about some \command{pax}
      headers which \command{bsdtar} (e.g., the default \command{tar} for
      Mac OS >= 10.6) can incorrectly include in \command{tar} files,
      and will skip them with a warning.
      
      \item PCRE has been upgraded to version 8.21: as well as bug fixes
      and greater Perl compatibility, this adds a JIT pattern compiler,
      about which PCRE's news says
      \sQuote{large performance benefits can be had in many situations}.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \command{R CMD INSTALL} will now no longer install certain
      file types from \file{inst/doc}: these are almost certainly
      mistakes and for some packages are wasting a lot of space.  These
      are \file{Makefile}, files generated by running LaTeX, and unless
      the package uses a \file{vignettes} directory, PostScript and
      image bitmap files.

      Note that only PDF vignettes have ever been supported: some of
      these files come from DVI/PS output from the Sweave defaults prior
      to \R 2.13.0.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item R configured with \option{--disable-openmp} would mistakenly
      set \code{HAVE_OPENMP} (internal) and \code{SUPPORT_OPENMP} (in
      \file{Rconfig.h}) even though no OpenMP flags were populated.

      \item  The \code{getS3method()} implementation had a very old
      and incorrect computation to find an S4 default method.
       