@@ -83,10 +83,10 @@ function(dir, outDir)
     ## But in any case, it is true for fields obtained from expanding R
     ## fields (Authors@R): these should not be reformatted.
 
-    db <- c(db,     
+    db <- c(db,
             .expand_package_description_db_R_fields(db),
             Built = Built)
-    
+
     .write_description(db, file.path(outDir, "DESCRIPTION"))
 
     outMetaDir <- file.path(outDir, "Meta")
@@ -897,19 +897,20 @@ resaveRdaFiles <- function(paths,
 compactPDF <-
     function(paths, qpdf = Sys.getenv("R_QPDF", "qpdf"),
              gs_cmd = Sys.getenv("R_GSCMD", ""),
-             gs_quality = c("printer", "ebook", "screen"),
+             gs_quality = Sys.getenv("GS_QUALITY", "none"),
              gs_extras = character())
 {
     if(!nzchar(Sys.which(qpdf)) && !nzchar(Sys.which(gs_cmd)))
     	return()
     if(length(paths) == 1L && isTRUE(file.info(paths)$isdir))
         paths <- Sys.glob(file.path(paths, "*.pdf"))
-    gs_quality <- match.arg(gs_quality)
+    gs_quality <- match.arg(gs_quality, c("none", "printer", "ebook", "screen"))
     tf <- tempfile("pdf")
     dummy <- rep.int(NA_real_, length(paths))
     ans <- data.frame(old = dummy, new = dummy, row.names = paths)
+    if(gs_quality != "none") gs_cmd <- find_gs_cmd(gs_cmd)
     for (p in paths) {
-        res <- if (nzchar(gs_cmd))
+        res <- if (nzchar(gs_cmd) && gs_quality != "none")
             system2(gs_cmd,
                     c("-q -dNOPAUSE -dBATCH -sDEVICE=pdfwrite",
                       sprintf("-dPDFSETTINGS=/%s", gs_quality),
@@ -931,6 +932,16 @@ compactPDF <-
         unlink(tf)
     }
     structure(na.omit(ans), class = c("compactPDF", "data.frame"))
+}
+
+find_gs_cmd <- function(gs_cmd)
+{
+    if(!nzchar(gs_cmd)) {
+        if(.Platform$OS.type == "windows") {
+            gs_cmd <- Sys.which("gswin64c")
+            if (!nzchar(gs_cmd)) gs_cmd <- Sys.which("gswin32c")
+        } else Sys.which("gs")
+    } else Sys.which(gs_cmd)
 }
 
 format.compactPDF <- function(x, ratio = 0.9, diff = 1e4, ...)
